--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,5 +83,6 @@ layout: compress
     {% endif %}
 
     {% include_cached search-loader.html lang=lang %}
+    <script id="dsq-count-scr" src="//cyc4d.disqus.com/count.js" async></script>
   </body>
 </html>
