--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,6 +94,7 @@ tail_includes:
 
   <div class="content">
     {{ content }}
+    {% include disqus.html %}
   </div>
 
   <div class="post-tail-wrapper text-muted">
