Update post.html - 게시물 댓글 기능 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,4 +147,13 @@ tail_includes:
     <!-- .post-tail-bottom -->
   </div>
   <!-- div.post-tail-wrapper -->
+  
+  <!-- 댓글 기능 추가 -->
+  <script src="https://utteranc.es/client.js"
+          repo="cyc4d/utterances-comment"
+          issue-term="pathname"
+          theme="github-dark-orange"
+          crossorigin="anonymous"
+          async>
+  </script>
 </article>
